--- a/.env
+++ b/.env
@@ -2,8 +2,5 @@ OAUTH2_CLIENT_ID=791126823139-piql3f0tr6ig8l0afd2guaro6td57tal.apps.googleuserco
 OAUTH2_CLIENT_SECRET=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
 OAUTH2_META_URL=https://accounts.google.com/.well-known/openid-configuration
 FLASK_SECRET=432dc545-07c7-4470-aba0-818d7a9cf3db
-FLASK_PORT= 5000
-SCOPE={
-        "scope": "openid profile email https://www.googleapis.com/auth/user.birthday.read https://www.googleapis.com/auth/user.gender.read",
-        # 'code_challenge_method': 'S256'  # enable PKCE
-    },
+FLASK_PORT=5000
+SCOPE=openid profile email https://www.googleapis.com/auth/user.birthday.read https://www.googleapis.com/auth/user.gender.read
